Prevent "(for bracket ...)" text to overlap with sponsor images (#173)

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ a.style {
 }
 
 .sponsors-container a {
-    padding-bottom: 50px;
+    padding-bottom: 225px;
 }
 
 .sponsor {
